add worknote